--- a/frontend/css/layout.css
+++ b/frontend/css/layout.css
@@ -207,10 +207,14 @@ ul#nav li.current a { color: #F06000; }
 }
 #about .profile-pic {
    position: relative;
-   width: 120px;
-   height: 120px;
-   border-radius: 100%;
+   width: 500px;  /* 根据需求调整宽度 */
+   height: 500px; /* 根据需求调整高度 */
+
+   object-fit: cover; /* 确保图片不会变形 */
+   object-position: center; /* 让人物居中显示 */
 }
+
+
 #about .contact-details { width: 41.66667%; }
 #about .download {
    width: 58.33333%;
